k8s/remodl-cluster/ixproxy-test.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ixproxy
  labels:
    app: ixproxy
spec:
  selector:
    matchLabels:
      app: ixproxy
  template:
    metadata:
      labels:
        app: ixproxy
    spec:
      nodeSelector:
        cloud: "hyperstack"
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
      containers:
        - name: ixproxy
          image: inferx/inferx_na:${VERSION}
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 1240
            initialDelaySeconds: 6
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_ADMIN", "IPC_LOCK", "SYS_RAWIO"]
            runAsUser: 0
            runAsGroup: 0
          resources:
            requests:
              cpu: "3"
              memory: "10Gi"
              hugepages-2Mi: "0" 
            limits:
              cpu: "20"
              memory: "100Gi"
              hugepages-2Mi: "0" 
              #nvidia.com/gpu: 1
          volumeMounts:
            - mountPath: /run/udev
              name: run-udev
            - mountPath: /dev/hugepages
              name: dev-hugepages
            - name: shm
              mountPath: /dev/shm
            # - mountPath: /opt/inferx/bin
            #   name: opt-inferx-bin
            - mountPath: /opt/inferx/work
              name: opt-inferx-work
            - mountPath: /opt/inferx/log
              name: opt-inferx-log
            - mountPath: /opt/inferx/data
              name: opt-inferx-data
            - mountPath: /opt/inferx/cache
              name: opt-inferx-cache
            - mountPath: /opt/inferx/snapshot
              name: opt-inferx-snapshot
            - mountPath: /var/run/docker/runtime-runc/moby/
              name: docker-runtime
            - name: dind
              mountPath: /var/lib/docker
            - name: opt-inferx-run
              mountPath: /opt/inferx/run
      volumes:
        - name: run-udev
          hostPath:
            path: /run/udev
        - name: dev-hugepages
          hostPath:
            path: /dev/hugepages
        - name: shm
          hostPath:
            path: /dev/shm
        - name: opt-inferx
          hostPath:
            path: /opt/inferx/
        - name: opt-inferx-log
          hostPath:
            path: /opt/inferx/log
        - name: opt-inferx-config
          hostPath:
            path: /opt/inferx/config
        - name: opt-inferx-work
          hostPath:
            path: /opt/inferx/work
        # - name: opt-inferx-bin
        #   hostPath:
        #     path: /opt/inferx/bin
        - name: opt-inferx-cache
          hostPath:
            path: /opt/inferx/cache
        - name: opt-inferx-data
          hostPath:
            path: /opt/inferx/data
        - name: opt-inferx-snapshot
          hostPath:
            path: /opt/inferx/snapshot
        - name: docker-runtime
          hostPath:
            path: /var/run/docker/runtime-runc/moby/
        - name: dind
          hostPath:
            path: /opt/inferx/dind
        - name: opt-inferx-run
          hostPath:
            path: /opt/inferx/run
      restartPolicy: Always
