k8s/remodl-cluster/nodeagent-minio.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nodeagent-blob
  labels:
    app: nodeagent
spec:
  selector:
    matchLabels:
      app: nodeagent
  template:
    metadata:
      labels:
        app: nodeagent
    spec:
      nodeSelector:
        inferx_nodeType: inferx_blob      
      containers:
        - name: nodeagent
          image: remodlai/inferx_na:v0.1.5.beta16-s3ql
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_ADMIN", "IPC_LOCK", "SYS_RAWIO"]
            runAsUser: 0
            runAsGroup: 0
          resources:
            requests:
              cpu: "15"               
              memory: "60Gi"              # Regular memory request (RAM)
              hugepages-2Mi: "1Gi"       # HugePages request
            limits:
              cpu: "20"               
              memory: "100Gi"              # Regular memory request (RAM)
              hugepages-2Mi: "1Gi" 
              # nvidia.com/gpu: 1
          volumeMounts:
            - mountPath: /run/udev
              name: run-udev
            - mountPath: /dev/hugepages
              name: dev-hugepages
            - name: dshm
              mountPath: /dev/shm
            # - mountPath: /opt/inferx/
            #   name: opt-inferx
            # - mountPath: /opt/inferx/config
            #   name: opt-inferx-config
            # - mountPath: /opt/inferx/bin
            #   name: opt-inferx-bin
            - mountPath: /opt/inferx/work
              name: opt-inferx-work
            - mountPath: /opt/inferx/log
              name: opt-inferx-log
            - mountPath: /opt/inferx/data
              name: opt-inferx-data
            - mountPath: /opt/inferx/cache
              name: opt-inferx-cache
            - mountPath: /opt/inferx/snapshot
              name: opt-inferx-snapshot
            - mountPath: /var/run/docker/runtime-runc/moby/
              name: docker-runtime
            # - mountPath: /home/brad/mnt
            #   name: docker-mnt
            - name: dind
              mountPath: /var/lib/docker
            - name: opt-inferx-run
              mountPath: /opt/inferx/run
      volumes:
        - name: run-udev
          hostPath:
            path: /run/udev
        - name: dev-hugepages
          hostPath:
            path: /dev/hugepages
        - name: shm
          hostPath:
            path: /dev/shm
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 16Gi
        - name: opt-inferx
          hostPath:
            path: /opt/inferx/
        - name: opt-inferx-log
          hostPath:
            path: /opt/inferx/log
        - name: opt-inferx-config
          hostPath:
            path: /opt/inferx/config
        - name: opt-inferx-work
          hostPath:
            path: /opt/inferx/work
        # - name: opt-inferx-bin
        #   hostPath:
        #     path: /opt/inferx/bin
        - name: opt-inferx-cache
          hostPath:
            path: /opt/inferx/cache
        - name: opt-inferx-data
          hostPath:
            path: /opt/inferx/data
        - name: opt-inferx-snapshot
          hostPath:
            path: /opt/inferx/snapshot
        - name: docker-runtime
          hostPath:
            path: /var/run/docker/runtime-runc/moby/
        - name: dind
          hostPath:
            path: /ephemeral/inferx/dind
        - name: opt-inferx-run
          hostPath:
            path: /opt/inferx/run
      restartPolicy: Always
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nodeagent-file
  labels:
    app: nodeagent
spec:
  selector:
    matchLabels:
      app: nodeagent
  template:
    metadata:
      labels:
        app: nodeagent
    spec:
      nodeSelector:
        inferx_nodeType: inferx_file
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
      # initContainers:
      #   - name: wait-for-dependencies
      #     image: busybox
      #     command:
      #       [
      #         "sh", "-c",
      #         "until nc -z etcd.default.svc.cluster.local 2379 && \
      #                nc -z keycloak.default.svc.cluster.local 8080; do \
      #             echo 'Waiting for dependencies...'; sleep 3; \
      #          done"
      #       ]
      containers:
        - name: nodeagent
          image: remodlai/inferx_na:v0.1.5.beta16-s3ql
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_ADMIN", "IPC_LOCK", "SYS_RAWIO"]
            runAsUser: 0
            runAsGroup: 0
          resources:
            requests:
              cpu: "3"
              memory: "10Gi"
              hugepages-2Mi: "0"
            limits:
              cpu: "20" # the number of cpus available on a node (that we are exposing to the container)
              memory: "100Gi"
              hugepages-2Mi: "0"
              nvidia.com/gpu: 1
          volumeMounts:
            - mountPath: /run/udev
              name: run-udev
            - mountPath: /dev/hugepages
              name: dev-hugepages
            - name: shm
              mountPath: /dev/shm
            # - mountPath: /opt/inferx/
            #   name: opt-inferx
            # - mountPath: /opt/inferx/config
            #   name: opt-inferx-config
            #   name: opt-inferx-config
            # - mountPath: /opt/inferx/bin
            #   name: opt-inferx-bin
            - mountPath: /opt/inferx/work
              name: opt-inferx-work
            - mountPath: /opt/inferx/log
              name: opt-inferx-log
            - mountPath: /opt/inferx/data
              name: opt-inferx-data
            - mountPath: /opt/inferx/cache
              name: opt-inferx-cache
            - mountPath: /opt/inferx/snapshot
              name: opt-inferx-snapshot
            - mountPath: /var/run/docker/runtime-runc/moby/
              name: docker-runtime
            - mountPath: /home/brad/mnt
              name: docker-mnt
            - name: dind
              mountPath: /var/lib/docker
            - name: opt-inferx-run
              mountPath: /opt/inferx/run
      volumes:
        - name: run-udev
          hostPath:
            path: /run/udev
        - name: dev-hugepages
          hostPath:
            path: /dev/hugepages
        - name: shm
          hostPath:
            path: /dev/shm
        - name: opt-inferx
          hostPath:
            path: /opt/inferx/
        - name: opt-inferx-log
          hostPath:
            path: /opt/inferx/log
        - name: opt-inferx-config
          hostPath:
            path: /opt/inferx/config
        - name: opt-inferx-work
          hostPath:
            path: /opt/inferx/work
        # - name: opt-inferx-bin
        #   hostPath:
        #     path: /opt/inferx/bin
        - name: opt-inferx-cache
          hostPath:
            path: /opt/inferx/cache
        - name: opt-inferx-data
          hostPath:
            path: /opt/inferx/data
        - name: opt-inferx-snapshot
          hostPath:
            path: /opt/inferx/snapshot
        - name: docker-runtime
          hostPath:
            path: /var/run/docker/runtime-runc/moby/
        - name: docker-mnt
          hostPath:
            path: /home/brad/mnt
        - name: dind
          hostPath:
            path: /ephemeral/inferx/dind
        - name: opt-inferx-run
          hostPath:
            path: /opt/inferx/run
      restartPolicy: Always
