k8s/remodl-cluster/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inferx-dashboard
  labels:
    app: inferx-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inferx-dashboard
  template:
    metadata:
      labels:
        app: inferx-dashboard
    spec:
      nodeSelector:
        inferx-dashboard: "true"
      containers:
        - name: inferx-dashboard
          image: remodlai/inferx-dashboard:v0.1.5-custom-v7
          imagePullPolicy: Always
          volumeMounts:
            - name: cert-volume
              mountPath: /etc/letsencrypt/
          livenessProbe:
            httpGet:
              path: /demo/intro?name=home.md
              port: 1250
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: cert-volume
          hostPath:
            path: /etc/letsencrypt/
---
apiVersion: v1
kind: Service
metadata:
  name: inferx-dashboard
spec:
  type: NodePort
  selector:
    app: inferx-dashboard
  ports:
    - name: http
      port: 1250
      targetPort: 1250
      nodePort: 31250
