k8s/remodl-cluster/db-deployment-with-csi-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      nodeSelector:
        inferx-postgres: "true"      
      containers:
        - name: postgres
          image: inferx/inferx_postgres:${VERSION}
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: db-data
              mountPath: /data/postgres
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30542
  type: NodePort
