k8s/remodl-cluster/keycloak_postgres_with_csi_ebs_pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      nodeSelector:
        inferx-postgres: "true"      
      containers:
        - name: postgres
          image: postgres:14.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /data/postgres  
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: keycloak-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
spec:
  selector:
    app: keycloak-postgres
  ports:
    - port: 5432
      targetPort: 5432
