k8s/remodl-cluster/scheduler_with_remodl_node_selector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  labels:
    app: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      nodeSelector:
        inferx-scheduler: "true"
      hostPID: true
      containers:
        - name: scheduler
          image: inferx/inferx_platform:${VERSION}
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /opt/inferx/log
              name: opt-inferx-log
          command: ["./svc", "/opt/inferx/config/node.json"]
      volumes:
        - name: opt-inferx-log
          hostPath:
            path: /opt/inferx/log      
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler
  labels:
    app: scheduler
spec:
  type: NodePort
  selector:
    app: scheduler
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31502
