k8s/remodl-cluster/secretdb_with_csi_pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-db
spec:      
  replicas: 1
  selector:
    matchLabels:
      app: secret-db
  template:
    metadata:
      labels:
        app: secret-db
    spec:
      nodeSelector:
        inferx-postgres: "true"
      containers:
        - name: postgres
          image: inferx/inferx_postgres:v0.1.5.beta37
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /data/postgres
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: secret-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: secret-db
spec:
  selector:
    app: secret-db
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30541
  type: NodePort
