k8s/remodl-cluster/statsvc_with_csi_pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statesvc
  labels:
    app: statesvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statesvc
  template:
    metadata:
      labels:
        app: statesvc
    spec:
      nodeSelector:
        inferx-statesvc: "true"
      hostPID: true
      containers:
        - name: statesvc
          image: inferx/inferx_platform:${VERSION}
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /opt/inferx/log
              name: opt-inferx-log
          command: ["./svc", "/opt/inferx/config/node.json"]
      volumes:
        - name: opt-inferx-log
          hostPath:
            path: /opt/inferx/log      
---
apiVersion: v1
kind: Service
metadata:
  name: statesvc
spec:
  type: NodePort
  selector:
    app: statesvc
  ports:
    - name: http
      port: 1237
      targetPort: 1237
